# englishStudy

./: CMakeLists.txt  README.md  baiduTranslate.js  cenglishstudy.cpp  cenglishstudy.h  common.cpp  common.h  enWords.db  main.cpp  readme.gmind  readme.md
database/: cdatebaseio.cpp  cdatebaseio.h  cworddate.cpp  cworddate.h
widget/: CCustomWords.cpp  CCustomWords.h  CCustomWords.ui  cwordstudywidget.cpp  cwordstudywidget.h  cwordstudywidget.ui  englishsettingwidget.cpp  englishsettingwidget.h  englishsettingwidget.ui  mainWindow.cpp  mainWindow.h  mainWindow.ui
